fix styles so you dont have to scroll on mobile to see footer

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,5 +1,5 @@
 .container {
-  min-height: 100vh;
+  height: 100%;
   padding: 0 0.5rem;
   display: flex;
   flex-direction: column;
@@ -10,7 +10,7 @@
 
 .main {
   padding: 5rem 0;
-  flex: 1;
+  flex: 1 1 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
